--- a/index.html
+++ b/index.html
@@ -35,17 +35,24 @@
           <li class="nav-item active">
             <a href="index.html" class="nav-link">Home</a>
           </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
+         
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+              aria-expanded="false">Guitars</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">New Guitars</a>
+              <a class="dropdown-item" href="#">Used Guitars</a>
+              <a class="dropdown-item" href="#">Bass Guitars</a>
+            </div>
           </li>
           <li class="nav-item">
-            <a href="services.html" class="nav-link">Services</a>
+            <a href="#" class="nav-link">Parts</a>
           </li>
           <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Tech</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -226,9 +233,8 @@
 
   <section id="gallery" class="py-5">
     <div class="container">
-      <h1 class="text-center">Photo Gallery</h1>
-      <p class="text-center">Check Out Our Photos</p>
-      <div class="row mb-4">
+      <h1 class="text-center">Recently Stocked Instruments</h1>
+      <div class="row mb-4 mt-3">
         <div class="col-md-4">
           <!-- GENERATE RANDOM IMG -->
           <a href="https://source.unsplash.com/random/560X560" data-toggle="lightbox" data-gallery="img-gallery"
