--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="row">
       <div class="col">
         <div class="p-5">
-          <a href="#" class="video" data-video="https://www.youtube.com/embed/bAJ1WTGNISk" data-toggle="modal" data-target="#videoModal"><i class="fas fa-play fa-3x"></i></a>
+          <a href="#" class="video" data-video="https://www.youtube.com/embed/-qT2QS04zaM" data-toggle="modal" data-target="#videoModal"><i class="fas fa-play fa-3x"></i></a>
           <h1>See Our Work</h1>
         </div>
       </div>
@@ -204,7 +204,7 @@
           <div class="col-md-6 align-self-center text-default">
             <h3>Complete Ibanez Library</h3>
             <p id="library-text">All of the information you could need about Ibanez guitars in one place! Look up the age of your guitar and view the entire library of Ibanez catalogs since 1978!</p>
-            <a href="about.html" class="btn btn-purple btn-lg">View Catalogs</a>
+            <a href="about.html" class="btn btn-purple btn-lg mb-5">View Catalogs</a>
           </div>
           <div class="col-md-6">
             <img src="/img/PG_ibanez_catalog.jpg" alt="" class="img-fluid rounded rounded-lg">
@@ -318,14 +318,13 @@
 
     <!-- VIDEO MODAL -->
 <div class="modal fade" id="videoModal">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
         <button class="close" data-dismiss="modal">
           <span>&times;</span>
         </button>
-        <iframe src="" frameborder="0" height="350" width="100%" allowfullscreen></iframe>
-      </div>
+        <iframe width="560" height="100%" src="https://www.youtube.com/embed/-qT2QS04zaM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
     </div>
   </div>
 </div>
