--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav id="nav" class="navbar navbar-expand-sm navbar-dark">
     <div class="container">
       <div class="mobile-nav">
-        <img src="/img/ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
+        <img src="/img/ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right box-shadow" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link text-shadow">Home</a>
           </li>
          
           <li class="nav-item dropdown">
@@ -75,13 +75,13 @@
             <div id="carouselExampleControls" class="carousel slide mt-5 " data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active justify-content-center">
-                  <img src="/img/rga_axionlabel_en.png" class=" d-block mw-100 box-shadow" alt="...">
+                  <img src="/img/rga_axionlabel_en.png" class=" d-block mw-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/img/rg_genesiscollection_en_yellow.png" class=" d-block mw-100 box-shadow" alt="...">
+                  <img src="/img/rg_genesiscollection_en_yellow.png" class=" d-block mw-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/img/rga_standard_blue.png" class=" d-block mw-100 box-shadow" alt="...">
+                  <img src="/img/rga_standard_blue.png" class=" d-block mw-100" alt="...">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
