further shadow tweaks

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="col">
         <div class="p-5">
           <a href="#" class="video video-btn" data-toggle="modal" data-src="https://www.youtube.com/embed/-qT2QS04zaM" data-target="#myModal"><i class="fas fa-play fa-3x"></i></a>
-          <h1>See Our Work</h1>
+          <h1 class="text-shadow">See Our Work</h1>
         </div>
       </div>
     </div>
@@ -173,21 +173,21 @@
         <div class="row mb-4 mt-5">
           <div class="col-md-4">
             <!-- GENERATE RANDOM IMG -->
-            <a href="https://source.unsplash.com/random/560X560" data-toggle="lightbox" data-gallery="img-gallery" 
+            <a class="box-shadow" href="https://source.unsplash.com/random/560X560" data-toggle="lightbox" data-gallery="img-gallery" 
               data-height="560" data-width="560">
               <img src="https://source.unsplash.com/random/560X560" alt="" class="img-fluid">
             </a>
           </div>
   
           <div class="col-md-4">
-            <a href="https://source.unsplash.com/random/561X561" data-toggle="lightbox" data-gallery="img-gallery"
+            <a class="box-shadow" href="https://source.unsplash.com/random/561X561" data-toggle="lightbox" data-gallery="img-gallery"
               data-height="561" data-width="561">
               <img src="https://source.unsplash.com/random/561X561" alt="" class="img-fluid">
             </a>
           </div>
           
           <div class="col-md-4">
-            <a href="https://source.unsplash.com/random/562X562" data-toggle="lightbox" data-gallery="img-gallery"
+            <a class="box-shadow" href="https://source.unsplash.com/random/562X562" data-toggle="lightbox" data-gallery="img-gallery"
               data-height="562" data-width="562">
               <img src="https://source.unsplash.com/random/562X562" alt="" class="img-fluid">
             </a>
