--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <img src="rga_axionlabel_en.png" class=" d-block mw-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="rga_axionlabel_en.png" class=" d-block mw-100" alt="...">
+                  <img src="rg_genesiscollection_en_yellow.png" class=" d-block mw-100" alt="...">
                 </div>
                 <div class="carousel-item">
                   <img src="rga_standard_blue.png" class=" d-block mw-100" alt="...">
@@ -260,7 +260,7 @@
 
 
         <!-- JQUERY -->
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
         <!-- POPPER -->
