--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <nav id="nav" class="navbar navbar-expand-sm navbar-dark">
     <div class="container">
       <div class="mobile-nav">
-        <img src="img/ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right box-shadow" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
+        <img src="ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right box-shadow" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
