inline style tweak

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
           <!-- STYLESHEET -->
   <link rel="stylesheet" href="styles.css">
   <title>Ibanez Rules</title>
+  <style>
+    body {
+   overflow-x: hidden;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* font-family: 'Lato', sans-serif !important; */
+    font-family: 'Roboto', sans-serif !important;
+}
+  </style>
 </head>
 
 <body class="bg-body">
