--- a/index.html
+++ b/index.html
@@ -22,19 +22,11 @@
           <!-- STYLESHEET -->
   <link rel="stylesheet" href="styles.css">
   <title>Ibanez Rules</title>
-  <style>
-    body {
-   overflow-x: hidden;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    /* font-family: 'Lato', sans-serif !important; */
-    font-family: 'Roboto', sans-serif !important;
-}
-  </style>
+  
 </head>
 
-<body class="bg-body">
+<body>
+  <div class="site-wrapper bg-body">
   <!-- Nav -->
 
   <nav id="nav" class="navbar navbar-expand-sm navbar-dark">
@@ -266,7 +258,7 @@
            </div>
          </div>
        </div>
-<!-- </div> -->
+</div>
 
 
         <!-- JQUERY -->
