--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
             <!-- BOOTSTRAP -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="bootstrap.css">
             <!-- EKKO LIGHTBOX -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
@@ -27,6 +25,7 @@
 
 <body>
   <div class="site-wrapper bg-body">
+
   <!-- Nav -->
 
   <nav id="nav" class="navbar navbar-expand-sm navbar-dark">
@@ -77,7 +76,25 @@
 
 
       <!-- HERO CAROUSEL -->
-      <section >
+
+      <div class="container pt-5">
+        
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="10000">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="rga_axionlabel_en.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="rg_genesiscollection_en_yellow.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="rga_standard_blue.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+      </div>
+
+<!-- <section >
         <div class="">
           <div class="container ">
             <div id="carouselExampleControls" class="carousel slide mt-5 " data-ride="carousel" data-interval="10000">
@@ -103,7 +120,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>  -->
     
 
       <!-- HERO ICON SECTION -->
@@ -172,10 +189,9 @@
 
     <div id="gallery">
       <div class="container">
-        <div class="row justify-content-center pt-5">
-          <h2 class="text-center text-white text-shadow">Recently Stocked Instruments
-
-          </h2>
+        <div class="row justify-content-center pt-5 pb-5">
+          <h2 class="text-center text-white text-shadow display-2">Recently Stocked Instruments
+        </h2>
         </div>
 
         <div class="row mb-4 mt-5">
@@ -203,10 +219,10 @@
         </div>
 
         <div class="container d-flex justify-content-center align-items-end py-5">
-          <div class="row pt-3">
+          <div class="row pt-5">
             <div class="col">
-              <h2 class="text-center text-white text-shadow">Sign Up For Our Newsletter</h2>
-              <p class="text-white text-center">Sign up for our newsletter to recieve the latest news and recieve a
+              <h2 class="text-center text-white text-shadow display-4">Sign Up For Our Newsletter</h2>
+              <p class="text-white text-center display-5 pt-2">Sign up for our newsletter to get all of the latest news and recieve a
                 discount on your first order!</p>
               <form class="form-inline justify-content-center pt-4">
                 <input type="text" class="form-control form-control-lg mb-2 mr-2" placeholder="Enter Name">
@@ -220,7 +236,7 @@
 
         <!-- FOOTER -->
 
-        <footer id="main-footer" class="text-center text-white pt-5">
+        <footer id="main-footer" class="text-center text-white pt-5 pb-2">
           <div class="container d-flex align-items-stretch justify-content-center">
             <div class="row">
               <div class="col align-self-end">
@@ -229,7 +245,6 @@
             </div>
           </div>
         </footer>
-
       </div>
     </div>
 </section>
@@ -258,7 +273,7 @@
            </div>
          </div>
        </div>
-</div>
+    </div>
 
 
         <!-- JQUERY -->
