--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div id="gallery">
       <div class="container">
         <div class="row justify-content-center pt-5 pb-5">
-          <h2 class="text-center text-white text-shadow display-2">Recently Stocked Instruments
+          <h2 class="text-center text-white text-shadow display-2">Recently Stocked Guitars
         </h2>
         </div>
 
