--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav id="nav" class="navbar navbar-expand-sm navbar-dark">
     <div class="container">
       <div class="mobile-nav">
-        <img src="ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right box-shadow" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
+        <img src="img/ibanez_rules banner.jpg" class="img-fluid w-75 d-sm-none float-right box-shadow" alt="logo" data-toggle="collapse" data-target="#navbarCollapse">
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
       </div>
      
       
-      <a href="index.html" class="navbar-brand d-none d-md-block"><img class="img-fluid" src="ibanez_rules banner.jpg" alt="logo"></a>
+      <a href="index.html" class="navbar-brand d-none d-md-block"><img class="img-fluid" src="img/ibanez_rules banner.jpg" alt="logo"></a>
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
@@ -82,13 +82,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="10000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="rga_axionlabel_en.png" class="d-block w-100" alt="...">
+            <img src="img/rga_axionlabel_en.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="rg_genesiscollection_en_yellow.png" class="d-block w-100" alt="...">
+            <img src="img/rg_genesiscollection_en_yellow.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="rga_standard_blue.png" class="d-block w-100" alt="...">
+            <img src="img/rga_standard_blue.png" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
             <a href="about.html" class="btn btn-purple btn-lg mb-5 box-shadow">View Catalogs</a>
           </div>
           <div class="col-md-6">
-            <img src="PG_ibanez_catalog.jpg" id="catalog" alt="" class="img-fluid rounded rounded-lg">
+            <img src="img/PG_ibanez_catalog.jpg" id="catalog" alt="" class="img-fluid rounded rounded-lg">
           </div>
         </div>
       </div>
@@ -334,7 +334,7 @@ $('#myModal').on('hide.bs.modal', function (e) {
 
   
   
-// document ready  
+ 
 });
 
 
